@@ -76,7 +76,7 @@ extern "C" {
  * @return @ref HAM_INTEGRITY_VIOLATED if the Database is broken
  */
 HAM_EXPORT ham_status_t HAM_CALLCONV
-ham_check_integrity(ham_db_t *db, ham_txn_t *txn);
+ham_db_check_integrity(ham_db_t *db, ham_txn_t *txn);
 
 /**
  * Set a user-provided context pointer
